--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -61,7 +61,9 @@
       "select-files-to-upload-for-either-the-transmitter-or-the-receiver": "Select files to upload for either the transmitter or the receiver",
       "transmitter-file": "Transmitter file",
       "upload": "Upload",
-      "receiver-file": "Receiver file"
+      "receiver-file": "Receiver file",
+      "file": "File",
+      "remove" : "Remove"
     },
     "select": {
       "submit-tasks": "Select existing GNU Radio files",
