--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -67,7 +67,9 @@
       "introduction": "Introduction",
       "load-files": "Load Files",
       "laboratory": "Laboratory",
-      "go-back": "Go back"
+      "go-back": "Go back",
+      "file-name": "File Name",
+      "delete": "Delete"
     },
     "select": {
       "submit-tasks": "Select existing GNU Radio files",
